# ai-crm-automation

./: .env.example  .gitignore  Dockerfile  README.md  ai-lead-intake-crm-automation-outline.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  logging.py  main.py
app/api/: auth.py  deps.py  internal.py  leads.py  metrics.py  webhooks.py  workflow_runs.py
app/models/: __init__.py  dedupe_key.py  lead.py  lead_event.py  user.py  workflow_run.py
app/schemas/: __init__.py  internal.py  lead.py  metrics.py  workflow.py
app/services/: crm.py  dedup.py  enrichment.py  extraction.py  notification.py  scoring.py
app/workers/: celery_app.py  tasks.py
frontend/: index.html
tests/: conftest.py  test_dedup.py  test_extraction.py  test_leads.py  test_scoring.py  test_webhooks.py
